--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "func.h": "c",
-        "head.h": "c"
+        "head.h": "c",
+        "threadpool.h": "c"
     }
 }
